# shakticore

./: 167x_Throughput_Proof.txt  168x_Throughput_Proof.txt  42x_Throughput_Proof.txt  50x_AI_Inference_Demo_Report.txt  Cargo.toml  Quick Start  README.md  demo.html  investor_demo.html  investor_demo.txt  investor_demo_report.md  investor_email_template.md  investor_pitch.md  social_media_post.txt
.cargo/: config.toml
benchmarks/: mod.rs
benchmarks/comparison/: tensorflow.rs
build_cache/: .rustc_info.json
build_cache/release/.fingerprint/aho-corasick-f463865e429e2faf/: lib-aho_corasick.json
build_cache/release/.fingerprint/anyhow-82de44b0a39bf94d/: build-script-build-script-build  build-script-build-script-build.json
build_cache/release/.fingerprint/autocfg-2d5296ac322031cf/: lib-autocfg
build_cache/release/.fingerprint/bytes-12c710e3cf6db12e/: lib-bytes
build_cache/release/.fingerprint/cc-cb37de807b4bf97c/: output-lib-cc
build_cache/release/.fingerprint/cfg-if-e58523e371c0086c/: lib-cfg_if  lib-cfg_if.json
build_cache/release/.fingerprint/cfg-if-f02bd28a1e32ed6e/: lib-cfg_if  lib-cfg_if.json
build_cache/release/.fingerprint/find-msvc-tools-a04acca23fae23ad/: lib-find_msvc_tools
build_cache/release/.fingerprint/getrandom-7e5b767dcc4e6e7d/: lib-getrandom
build_cache/release/.fingerprint/getrandom-bf369dcd5f42aadc/: run-build-script-build-script-build  run-build-script-build-script-build.json
build_cache/release/.fingerprint/getrandom-da03462fb7e44d0f/: build-script-build-script-build
build_cache/release/.fingerprint/jobserver-1bc31d00860b8e46/: lib-jobserver
build_cache/release/.fingerprint/libm-180f93fca828a75e/: run-build-script-build-script-build
build_cache/release/.fingerprint/libm-3c3cfe19118c044a/: lib-libm
build_cache/release/.fingerprint/libm-7e03496e697a05ce/: build-script-build-script-build.json
build_cache/release/.fingerprint/lock_api-1f21d2e960e779ae/: lib-lock_api  lib-lock_api.json
build_cache/release/.fingerprint/log-d09a1cf5ffd20087/: lib-log
build_cache/release/.fingerprint/memchr-10fdaa5e15a7dab1/: lib-memchr.json
build_cache/release/.fingerprint/memchr-2852de96950bf0ca/: lib-memchr  (+1 more)
examples/: basic_usage.rs
scripts/: benchmark.sh  build.sh
src/: lib.rs  main.rs
src/api/: mod.rs
src/backend/: mod.rs
src/backend/cpu/: mod.rs  simd.rs
src/backend/gpu/: cuda.rs  mod.rs  vulkan.rs
src/engine/: inference.rs  mod.rs
src/memory/: mod.rs  pool.rs
src/models/: mod.rs
src/monitoring/: metrics.rs  mod.rs
src/nn/: mod.rs
src/nn/layers/: mod.rs
src/optimizations/: mod.rs
src/tensor/: mod.rs  tensor.rs
src/utils/: mod.rs
(+86 files in other folders)
