[package]
name = "fast-inference"
version = "0.1.0"
edition = "2021"
description = "50x faster AI inference platform in Rust"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/fast-ai-inference"
readme = "README.md"
keywords = ["ai", "inference", "gpu", "rust", "machine-learning"]
categories = ["science::machine-learning", "hardware-support::gpu"]

[features]
default = ["gpu-vulkan", "rest-api"]
# GPU backends
gpu-vulkan = ["wgpu", "ash", "gpu-alloc"]
gpu-cuda = ["cuda", "rustacuda"]
gpu-metal = ["metal", "core-graphics"]
cpu-simd = ["packed_simd", "rayon"]
# API features
rest-api = ["actix-web", "serde_json"]
grpc-api = ["tonic", "prost"]
cli = ["clap", "console"]
monitoring = ["prometheus", "tracing"]
quantization = ["half", "fixed"]

[dependencies]
rand = "0.8"
# Core
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = "0.3"

# GPU Computation
wgpu = { version = "0.20", optional = true }
ash = { version = "0.37", optional = true }  # Vulkan
cuda = { version = "0.1", optional = true }
metal = { version = "0.24", optional = true }
gpu-alloc = { version = "0.5", optional = true }

# CPU Computation
rayon = { version = "1.7", optional = true }
packed_simd = { version = "0.3", optional = true }
ndarray = { version = "0.15" }
# blas-src removed due to Windows build issues


# Tensor Operations
tract-onnx = "0.18"
tract-core = "0.18"

# APIs
actix-web = { version = "4.0", optional = true }
serde_json = { version = "1.0", optional = true }
tonic = { version = "0.9", optional = true }
prost = { version = "0.11", optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
console = { version = "0.15", optional = true }

# Monitoring
prometheus = { version = "0.13", optional = true }
metrics = { version = "0.20", optional = true }

# Utilities
bytes = "1.0"
crossbeam = "0.8"
dashmap = "5.0"
parking_lot = "0.12"
lru = "0.7"
once_cell = "1.0"

# Additional Feature Dependencies
rustacuda = { version = "0.1", optional = true }
core-graphics = { version = "0.22", optional = true }
half = { version = "2.2", optional = true }
fixed = { version = "1.24", optional = true }

[dev-dependencies]
criterion = "0.4"
tempfile = "3.0"
assert_approx_eq = "1.0"
test-case = "3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[workspace]
members = ["."]
